# mnist-cuda

./: README.md
cpp/: CMakeLists.txt  backward_functions.cpp  forward_functions.cpp  inference.cpp  main.cpp  visualize.cpp
cpp/include/: backward_functions.h  forward_functions.h
